# uw-idp-web-tests

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.yaml  strict-host-override.docker-compose.yml
.github/scripts/: README.md  configure-workflow.sh  funcs.sh
.github/workflows/: automated-idp-web-tests.yml  cache-new-image.yml  deleteme.yml  idp-login-request-generator.yml  load-balancer-request-generator.yml  manual-idp-web-tests.yml  scheduled-idp-web-tests.yml  stop-test-service-providers.yml
docs/: cloud-integration.md  github-actions.md  running-from-github.md  settings-and-options.md  test-reports.md  test-secrets.md  test-service-providers.md  testing-sustained-requests.md
scripts/: build-images.sh  get-idp-ip-address.sh  install-build-scripts.sh  run-idp-login-request-generator.sh  run-tests.sh  set-idp-host.sh  wait-for-selenium.sh
tests/: conftest.py  helpers.py  models.py  secret_manager.py  sp_manager.py  test_2fa_duo.py  test_attributes.py  test_generate_requests.py  test_idp_accesss_control.py  test_password_sign_on.py  test_transient_persistent.py
tests/access_control/: __init__.py  test_auto_2fa.py  test_auto_2fa_cond_member.py  test_auto_2fa_cond_non_member.py  test_cond2fa_cond_acc_group_member_2fa_non_member.py  test_cond2fa_cond_member_both.py  test_cond2fa_cond_nonmember_both.py  test_cond2fa_group_member.py  test_cond2fa_non_member.py  test_cond_access_group_member.py  test_cond_access_non_member.py  test_sp_opt_out.py
tests/attributes/: __init__.py  test_attributes.py  test_nameid_known_values.py  test_transient_persistent.py
tests/eval/: test_2fa_duo.py  test_attributes.py  test_password_sign_on.py
